add page catalog and view show catalog

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 					<a class="nav-link fw-lighter cake_blue" href="#step3">Создать торт</a>
 				</li>
 				<li class="nav-item me-5">
-					<a class="nav-link fw-lighter cake_blue" href="#step2">Каталог</a>
+					<a class="nav-link fw-lighter cake_blue" href="step2">Каталог</a>
 				</li>
 				<li class="nav-item me-5">
 					<a class="nav-link fw-lighter cake_blue" href="#step4">Оплата и доставка</a>
@@ -419,7 +419,7 @@
 			</div>
 			<div class="col-4 col-xl-2 d-flex flex-column">
 				<a href="#step3" class="text-decoration-none text-white">Создать торт</a>
-				<a href="#step2" class="text-decoration-none text-white">Каталог</a>
+				<a href="step2" class="text-decoration-none text-white">Каталог</a>
 				<a href="#Contacts" class="text-decoration-none text-white">Контакты</a>
 			</div>
 			<div class="col-12 col-xl-6 d-flex flex-column align-items-start align-items-xl-end mt-3 mt-xl-0">
