Добавлено: detail.html, views.detail, Заказ добавляется в ордер

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,13 @@
 	<!-- Для продакшина: -->
 	<!-- <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script> -->
 	<script src="https://unpkg.com/vee-validate"></script>
-	<title>Тортики</title>
+	{% block title %}
+	{% endblock %}
+	<script>
+		$('#myModal').on('shown.bs.modal', function () {
+		  $('#myInput').trigger('focus')
+		})
+	</script>
 </head>
 <body>
 <header class="navbar navbar-expand-xl navbar-light fixed-top bg-white py-4">
