--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
+{% block title %}
+	<title>Тортики</title>
+{% endblock %}
 {% block content %}
 <main>
 	<div class="container mt-header">
