--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 					</v-form>
 
 					<div class="modal-footer d-flex flex-column justify-content-between align-items-center text-center border-0 mx-5">
-						<p class="fs_12 cake_grey">{% verbatim %}{{Step === `Number` ? `Нажимая на кнопку, вы соглашаетесь на обработку персональных данных в соответствии с политикой конфиденциальности` : Step === 'Code' ? `Осталось времени: 05:00` : ``}}{% endverbatim %}</p>
+						<p class="fs_12 cake_grey">{% verbatim %}{{Step === `Number` ? `Нажимая на кнопку, вы соглашаетесь на обработку персональных данных в соответствии с <a class="text fs_12 cake_blue" href="{% url 'agreement' %}">политикой конфиденциальности</a>` : Step === 'Code' ? `Осталось времени: 05:00` : ``}}{% endverbatim %}</p>
 						<a href="#" v-if="Step === `Code`" @click.prevent="ToRegStep1" class="text-decoration-none cake_pink fs_12">изменить данные</a>
 					</div>
 				</div>
@@ -205,6 +205,9 @@
 						<label for="comment" class="cake_blue">Комментарий к заказу</label>
 						<textarea v-model="Comments" :class="Comments ? 'cake__border_blue': ''" name="comment" id="comment" rows="3" class="form-control mt-2 cake__textinput" style="resize: none"></textarea>
 					</div>
+          <div>
+            <small class="text fs_12">Нажимая на кнопку, вы соглашаетесь на обработку персональных данных в соответствии с <a class="text fs_12 cake_blue" href="{% url 'agreement' %}">политикой конфиденциальности</a></small>
+          </div>
 					<div class="d-flex justify-content-end">
 						<button type="submit" class="btn text-white rounded-pill mt-3 shadow-none cake__button cake__bg_pink">Подтвердить</button>
 						<a href="#step4" ref="ToStep4" class="d-none"></a>
