Добавлено: починил верстку, починил авторизоваться/регистрироваться, добавил полностью рабочий личный кабинет, плюс мелкие исправления везде

--- a/templates/lk-order.html
+++ b/templates/lk-order.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
+{% include 'navbar.html' %}
 <nav class="navbar navbar-expand-xl navbar-light fixed-top bg-white py-4">
 	<div class="container">
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
