--- a/templates/detail.html
+++ b/templates/detail.html
@@ -5,93 +5,109 @@
 {% endblock %}
 
 {% block content %}
+{% include 'navbar.html' %}
 <main>
-<article class="row pt-header d-flex justify-content-center" id="step2">
-	<h2 class="font_Gogh fs_40 cake_blue text-center mb-3">Готовые торты</h2>
-	<div class="container my-5 py-5">
-		<div class="row">
-			<div class="col">
-				<div class="card mb-3" style="max-width: 940px">
-					<div class="row no-gutters">
-						<div class="col-md-4">
-							<img src="media/{{ product.image|urlencode }}"  class="card-img" alt="фото торта {{ product.name }}">
-						</div>
-						<div class="col-md-8">
-							<div class="card-body">
-								<h5 class="card-title">{{ product.name }}</h5>
-								<p class="card-text">{{ product.price }}</p>
-								<p><span class="badge badge-light">{{ product.description|linebreaks }}</span></p>
-								<p class="card-text"><a href="{{ cake_card.id }}" target="_blank">Заказать</a></p>
+	<div class="container mt-header">
+		<aside class="modal fade" id="RegModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="RegModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered">
+				<div class="modal-content px-4 cake__modal">
+					<div class="modal-header border-0 pb-0 pt-4">
+						<button @click="Reset" type="button" class="btn-close border rounded-pill" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-header border-0 py-0">
+						<label for="reg" class="modal-title font_Gogh fs_40 cake_blue" id="RegModalLabel"><a href="{% url 'login' %}">Вход</a> / <a href="{% url 'register' %}">Регистрация</a></label>
+					</div>
+
+				</div>
+			</div>
+		</aside>
+		<article class="row pt-header d-flex justify-content-center" id="step2">
+			<h2 class="font_Gogh fs_40 cake_blue text-center mb-3">Готовые торты</h2>
+			<div class="container my-5 py-5">
+				<div class="row">
+					<div class="col">
+						<div class="card mb-3" style="max-width: 940px">
+							<div class="row no-gutters">
+								<div class="col-md-4">
+									<img src="media/{{ product.image|urlencode }}"  class="card-img" alt="фото торта {{ product.name }}">
+								</div>
+								<div class="col-md-8">
+									<div class="card-body">
+										<h5 class="card-title">{{ product.name }}</h5>
+										<p class="card-text">{{ product.price }}</p>
+										<p><span class="badge badge-light">{{ product.description|linebreaks }}</span></p>
+										<p class="card-text"><a href="{{ cake_card.id }}" target="_blank">Заказать</a></p>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-</article>
-<!--action="{% url 'main' %}"-->
-<form  method="post" id='form_buying_product' class='form-group'>
-	{% csrf_token %}
-	<textarea type="text" name="PRICE" class="d-none">{{ product.price }}</textarea>
-	<br>
-	<input type="text" name="TITLE" value="{{ product.name }}" class="d-none">
-	<input type="text" name="CAKE_PK" value='{{ product.pk }}' class="d-none">
-	<br>
-	<div class="container my-5 py-5">
-		<div class="col">
-			<div class="d-flex flex-column position-relative pb-5">
-				<h2 class="fs_40 font_Gogh cake_blue text-center align-self-center">Оформление заказа</h2>
-			</div>
-			<div class="row">
-				<div class="col-6 col-lg-4 d-flex flex-column">
-					<label for="name" class="my-1 fs_40 cake_blue">Имя</label>
-					<label for="phone" class="my-1 fs_40 cake_blue">Телефон</label>
-					<label for="email" class="my-1 fs_40 cake_blue">Почта</label>
-				</div>
-				<div class="col-6 col-lg-4 d-flex flex-column">
-					<div class="position-relative pb-1">
-						<input v-model="Name" :class="Name ? 'cake__border_blue': ''" type="text" name="NAME" id="name" placeholder="Введите ваше имя" class="form-control my-3 cake__textinput">
+		</article>
+		<!--action="{% url 'main' %}"-->
+		<form  method="post" id='form_buying_product' class='form-group'>
+			{% csrf_token %}
+			<textarea type="text" name="PRICE" class="d-none">{{ product.price }}</textarea>
+			<br>
+			<input type="text" name="TITLE" value="{{ product.name }}" class="d-none">
+			<input type="text" name="CAKE_PK" value='{{ product.pk }}' class="d-none">
+			<br>
+			<div class="container my-5 py-5">
+				<div class="col">
+					<div class="d-flex flex-column position-relative pb-5">
+						<h2 class="fs_40 font_Gogh cake_blue text-center align-self-center">Оформление заказа</h2>
 					</div>
-					<div class="position-relative pb-1">
-						<input v-model="Phone" :class="Phone ? 'cake__border_blue': ''" type="tel" name="PHONE" id="phone" placeholder="Введите номер" class="form-control my-3 cake__textinput">
+					<div class="row">
+						<div class="col-6 col-lg-4 d-flex flex-column">
+							<label for="name" class="my-1 fs_40 cake_blue">Имя</label>
+							<label for="phone" class="my-1 fs_40 cake_blue">Телефон</label>
+							<label for="email" class="my-1 fs_40 cake_blue">Почта</label>
+						</div>
+						<div class="col-6 col-lg-4 d-flex flex-column">
+							<div class="position-relative pb-1">
+								<input v-model="Name" :class="Name ? 'cake__border_blue': ''" type="text" name="NAME" id="name" placeholder="Введите ваше имя" class="form-control my-3 cake__textinput">
+							</div>
+							<div class="position-relative pb-1">
+								<input v-model="Phone" :class="Phone ? 'cake__border_blue': ''" type="tel" name="PHONE" id="phone" placeholder="Введите номер" class="form-control my-3 cake__textinput">
+							</div>
+							<div class="position-relative pb-1">
+								<input v-model="Email" :class="Email ? 'cake__border_blue': ''" type="email" name="EMAIL" id="email" placeholder="Введите почту" class="form-control my-3 cake__textinput">
+							</div>
+						</div>
 					</div>
-					<div class="position-relative pb-1">
-						<input v-model="Email" :class="Email ? 'cake__border_blue': ''" type="email" name="EMAIL" id="email" placeholder="Введите почту" class="form-control my-3 cake__textinput">
+					<div class="d-flex flex-column position-relative pb-4">
+						<h2 class="fs_40 cake_pink">Данные для доставки</h2>
 					</div>
-				</div>
-			</div>
-			<div class="d-flex flex-column position-relative pb-4">
-				<h2 class="fs_40 cake_pink">Данные для доставки</h2>
-			</div>
 
-			<div class="row">
-				<div class="col-6 col-lg-4 d-flex flex-column">
-					<label for="address" class="my-1 fs_40 cake_blue">Адрес</label>
-					<label for="date" class="my-1 fs_40 cake_blue">Дата</label>
-					<label for="time" class="my-1 fs_40 cake_blue">Время</label>
-				</div>
-				<div class="col-6 col-lg-4 d-flex flex-column">
-					<input v-model="Address" :class="Address ? 'cake__border_blue': ''" type="text" name="ADDRESS" id="address" placeholder="Введите ваш адрес" class="form-control my-3 cake__textinput">
-					<input v-model="Dates" :class="Dates ? 'cake__border_blue': ''" type="date" name="date" id="DATE" placeholder="ДД.ММ.ГГ" class="form-control my-3 cake__textinput">
-					<input v-model="Time" :class="Time ? 'cake__border_blue': ''" type="time" name="time" id="TIME" placeholder="00:00" class="form-control my-3 cake__textinput">
-				</div>
-			</div>
-			<div class="row mt-3">
-				<div class="col-12 col-md-6">
-					<label for="deliv-comment" class="cake_blue">Комментарий для курьера</label>
-					<textarea v-model="DelivComments" :class="DelivComments ? 'cake__border_blue': ''" name="DELIVCOMMENTS" id="deliv-comment" class="form-control cake__textinput mt-3" rows="2" style="resize: none"></textarea>
-				</div>
-				<div class="col-12 col-md-6 d-flex flex-column align-items-center align-items-md-end mt-3 mt-md-0">
-					<div class="d-flex">
-						<span class="cake_pink fs_40 fw-bold me-2">Итого: {{ product.price }}₽</span>
+					<div class="row">
+						<div class="col-6 col-lg-4 d-flex flex-column">
+							<label for="address" class="my-1 fs_40 cake_blue">Адрес</label>
+							<label for="date" class="my-1 fs_40 cake_blue">Дата</label>
+							<label for="time" class="my-1 fs_40 cake_blue">Время</label>
+						</div>
+						<div class="col-6 col-lg-4 d-flex flex-column">
+							<input v-model="Address" :class="Address ? 'cake__border_blue': ''" type="text" name="ADDRESS" id="address" placeholder="Введите ваш адрес" class="form-control my-3 cake__textinput">
+							<input v-model="Dates" :class="Dates ? 'cake__border_blue': ''" type="date" name="date" id="DATE" placeholder="ДД.ММ.ГГ" class="form-control my-3 cake__textinput">
+							<input v-model="Time" :class="Time ? 'cake__border_blue': ''" type="time" name="time" id="TIME" placeholder="00:00" class="form-control my-3 cake__textinput">
+						</div>
 					</div>
-					<button type="submit" class="btn btn_hover text-white rounded-pill mt-3 px-5 shadow-none cake__button cake__bg_pink">К оплате</button>
+					<div class="row mt-3">
+						<div class="col-12 col-md-6">
+							<label for="deliv-comment" class="cake_blue">Комментарий для курьера</label>
+							<textarea v-model="DelivComments" :class="DelivComments ? 'cake__border_blue': ''" name="DELIVCOMMENTS" id="deliv-comment" class="form-control cake__textinput mt-3" rows="2" style="resize: none"></textarea>
+						</div>
+						<div class="col-12 col-md-6 d-flex flex-column align-items-center align-items-md-end mt-3 mt-md-0">
+							<div class="d-flex">
+								<span class="cake_pink fs_40 fw-bold me-2">Итого: {{ product.price }}₽</span>
+							</div>
+							<button type="submit" class="btn btn_hover text-white rounded-pill mt-3 px-5 shadow-none cake__button cake__bg_pink">К оплате</button>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
+		</form>
 	</div>
-</form>
 </main>
 
 
