Добавлено: починена кнопка выхода, добавлены тестовые платежи.

--- a/templates/lk.html
+++ b/templates/lk.html
@@ -119,7 +119,7 @@
 				<p class="cake_grey">Вы можете добавить торт из <a href="{% url 'catalog' %}" class="text-decoration-none cake_pink">Каталога</a> или <a href="{% url 'main' %}" class="text-decoration-none cake_pink">Создать свой</a>.</p>
 				<span class="cake_grey">Есть вопросы?</span>
 				<span class="cake_grey">Воспользуйтесь нашим <a href="https://vk.com/devmanorg" class="text-decoration-none cake_pink">чат-ботом</a>.</span>
-				<button class="btn text-white rounded-pill align-self-end px-5 mt-3 shadow-none cake__button cake__bg_pink">Выйти</button>
+				<a href="logout" class="btn text-white rounded-pill align-self-end px-5 mt-3 shadow-none cake__button cake__bg_pink">Выйти</a>
 			{% endif %}
 		</div>
 	</div>
